--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@import './app/variables.scss';
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #303030;}
+
+.mat-tooltip{
+  font-size: 12px !important;
+}
+
+mat-dialog-container {
+  background-color: #121212 !important;
+  color: $baseColor !important;
+}
+
+.cdk-overlay-pane.my-dialog {
+  position: relative!important;
+}
+
+.close.mat-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+  font-weight: bold;
+}
+
+mat-hint {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.snackBar {
+  font-weight: bold;
+}
+
